--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Cong Le",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./test"
+    "test": "node_modules/.bin/mocha ./test"
   },
   "repository": {
     "type": "git",
